feat: add dotenv support and sample data seeding functionality

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -3,9 +3,11 @@
     <div class="p-4 p-md-5 mb-4 rounded-3 bg-body-secondary">
       <div class="col-lg-8 px-0">
         <h1 class="display-6">Welcome to Taskboard</h1>
-        <p class="lead mb-0">
-          Multi-page app scaffold using Vite with modular page and component files.
+        <p class="lead mb-3">
+          Taskboard is a Trello-style app for managing projects and tasks with draggable stages,
+          project collaboration, and clear progress tracking.
         </p>
+        <p class="mb-0 fw-semibold">Please register / login.</p>
       </div>
     </div>
   </section>
