feat: Implement user authentication with login and registration pages
- Added login and registration pages with forms for user input.
- Integrated Supabase for user authentication, including sign-in and sign-up functionalities.
- Updated header and footer components to include links to login and register.
- Enhanced dashboard with project and task summaries.
- Improved styling for better user experience.
- Added necessary database migrations for user token fields and seeded sample data.

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -7,7 +7,13 @@
           Taskboard is a Trello-style app for managing projects and tasks with draggable stages,
           project collaboration, and clear progress tracking.
         </p>
-        <p class="mb-0 fw-semibold">Please register / login.</p>
+        <p class="mb-2 fw-semibold">
+          Please <a href="register/">register</a> / <a href="login/">login</a>.
+        </p>
+        <div class="d-flex gap-2 flex-wrap">
+          <a class="btn btn-primary" href="register/">Register</a>
+          <a class="btn btn-outline-primary" href="login/">Login</a>
+        </div>
       </div>
     </div>
   </section>
