--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -2,14 +2,52 @@
   <section class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h1 class="h3 mb-0">Dashboard</h1>
-      <a class="btn btn-outline-primary" href="/">Back to Home</a>
-    </div>
-    <div class="card">
-      <div class="card-body">
-        <p class="mb-0">
-          This is the `/dashboard` page scaffold. Taskboard features can be added here.
-        </p>
+      <div class="d-flex gap-2">
+        <a class="btn btn-outline-primary" href="/">Back to Home</a>
+        <button id="dashboardSignOut" type="button" class="btn btn-outline-secondary">Sign out</button>
       </div>
     </div>
+
+    <div class="card mb-3">
+      <div class="card-body">
+        <div class="row g-2 mb-3">
+          <div class="col-6 col-md-3">
+            <div class="summary-item">
+              <small class="text-body-secondary d-block">Projects</small>
+              <strong id="projectsCount">0</strong>
+            </div>
+          </div>
+          <div class="col-6 col-md-3">
+            <div class="summary-item">
+              <small class="text-body-secondary d-block">Tasks Total</small>
+              <strong id="tasksTotalCount">0</strong>
+            </div>
+          </div>
+          <div class="col-6 col-md-3">
+            <div class="summary-item">
+              <small class="text-body-secondary d-block">Tasks Pending</small>
+              <strong id="tasksPendingCount">0</strong>
+            </div>
+          </div>
+          <div class="col-6 col-md-3">
+            <div class="summary-item">
+              <small class="text-body-secondary d-block">Tasks Done</small>
+              <strong id="tasksDoneCount">0</strong>
+            </div>
+          </div>
+        </div>
+
+        <label for="projectSelect" class="form-label mb-1">Project</label>
+        <select id="projectSelect" class="form-select"></select>
+
+        <div class="mt-2">
+          <a id="projectDetailsLink" class="btn btn-sm btn-outline-primary" href="#">Open Project Page</a>
+        </div>
+      </div>
+    </div>
+
+    <div id="dashboardMessage" class="alert d-none" role="alert"></div>
+
+    <div id="boardColumns" class="board-columns"></div>
   </section>
 </main>
