feat: restructure project pages and add project form functionality

--- a/project-tasks/index.html
+++ b/project-tasks/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taskboard | Projects</title>
+    <title>Taskboard | Project Tasks</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/projects.js"></script>
+    <script type="module" src="/src/project-tasks.js"></script>
   </body>
 </html>
