--- a/src/pages/project-details/project-details.html
+++ b/src/pages/project-details/project-details.html
@@ -2,7 +2,7 @@
   <section class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h1 id="projectTitle" class="h3 mb-0">Project</h1>
-      <a class="btn btn-outline-primary" href="/dashboard/">Back to Dashboard</a>
+      <a class="btn btn-outline-primary" href="/projects/">Back to Projects</a>
     </div>
 
     <div id="projectMessage" class="alert d-none" role="alert"></div>
