--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -41,7 +41,7 @@
         <select id="projectSelect" class="form-select"></select>
 
         <div class="mt-2">
-          <a id="projectDetailsLink" class="btn btn-sm btn-outline-primary" href="#">Open Project Page</a>
+          <a id="projectDetailsLink" class="btn btn-sm btn-outline-primary" href="#">View Tasks</a>
         </div>
       </div>
     </div>
