feat: update project task links and enhance drag-and-drop functionality in project details

--- a/src/pages/project-details/project-details.html
+++ b/src/pages/project-details/project-details.html
@@ -34,6 +34,8 @@
       </div>
     </div>
 
-    <div id="projectBoardColumns" class="board-columns"></div>
+    <div id="projectBoardViewport" class="board-viewport">
+      <div id="projectBoardColumns" class="board-columns"></div>
+    </div>
   </section>
 </main>
