feat: update task controls and add stage action buttons in project details feat: enhance project form to create default stages and add task creation option feat: add 'Add Tasks' button in projects overview for quick task access

--- a/src/pages/project-form/project-form.html
+++ b/src/pages/project-form/project-form.html
@@ -23,6 +23,9 @@
 
       <div class="d-flex gap-2 justify-content-end">
         <a class="btn btn-outline-secondary" href="/projects/">Cancel</a>
+        <button id="projectFormSubmitAndTasks" type="submit" class="btn btn-outline-primary" data-after-create="tasks">
+          Create & Add Tasks
+        </button>
         <button id="projectFormSubmit" type="submit" class="btn btn-primary">Save</button>
       </div>
     </form>
