feat: Implement Admin Panel with user and project management
- Added admin panel HTML, CSS, and JavaScript for managing projects, stages, tasks, and users.
- Introduced role-based access control with admin roles and permissions in Supabase.
- Updated project selection UI in the dashboard to use buttons instead of a dropdown.
- Enhanced project and user management functionalities, including edit and delete actions.
- Improved error handling and user feedback messages throughout the admin interface.
- Refactored project routes to align with new admin functionalities.

--- a/src/pages/dashboard/dashboard.html
+++ b/src/pages/dashboard/dashboard.html
@@ -37,8 +37,7 @@
           </div>
         </div>
 
-        <label for="projectSelect" class="form-label mb-1">Project</label>
-        <select id="projectSelect" class="form-select"></select>
+        <div id="projectCards" class="project-cards" aria-label="Projects"></div>
 
         <div class="mt-2">
           <a id="projectDetailsLink" class="btn btn-sm btn-outline-primary" href="#">View Tasks</a>
