--- a/src/pages/projects/projects.html
+++ b/src/pages/projects/projects.html
@@ -4,7 +4,7 @@
       <h1 class="h3 mb-0">Projects</h1>
       <div class="d-flex gap-2">
         <a class="btn btn-outline-primary" href="/dashboard/">Back to Dashboard</a>
-        <a class="btn btn-primary" href="/project/new/add">Add Project</a>
+        <a class="btn btn-primary" href="/projects/new">Add Project</a>
       </div>
     </div>
 
