--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -1,18 +1,17 @@
 <main class="page-main py-5">
   <section class="container">
-    <div class="p-4 p-md-5 mb-4 rounded-3 bg-body-secondary">
-      <div class="col-lg-8 px-0">
-        <h1 class="display-6">Welcome to Taskboard</h1>
-        <p class="lead mb-3">
-          Taskboard is a Trello-style app for managing projects and tasks with draggable stages,
-          project collaboration, and clear progress tracking.
+    <div class="home-hero p-4 p-md-5 mb-4 rounded-3 bg-body-secondary">
+      <div class="col-lg-10 px-0">
+        <span class="home-hero-chip">TASKBOARD</span>
+        <h1 class="home-hero-title">Plan work, track progress, stay aligned.</h1>
+        <p class="home-hero-copy mb-4">
+          Taskboard is a Trello-style workflow app built for teams and solo makers. Create projects,
+          organize tasks into stages, and drag cards across your board as work moves from idea to done.
         </p>
-        <p class="mb-2 fw-semibold">
-          Please <a href="register/">register</a> / <a href="login/">login</a>.
-        </p>
-        <div class="d-flex gap-2 flex-wrap">
-          <a class="btn btn-primary" href="register/">Register</a>
-          <a class="btn btn-outline-primary" href="login/">Login</a>
+        <div class="home-hero-actions d-flex gap-2 align-items-center flex-wrap">
+          <a class="btn btn-primary btn-lg px-4" href="/register/">Register</a>
+          <a class="btn btn-outline-primary btn-lg px-4" href="/login/">Login</a>
+          <span class="text-body-secondary">Please register / login to get started.</span>
         </div>
       </div>
     </div>
