--- a/src/pages/project-details/project-details.html
+++ b/src/pages/project-details/project-details.html
@@ -3,6 +3,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
       <h1 id="projectTitle" class="h3 mb-0">Project</h1>
       <div class="d-flex gap-2">
+        <a id="projectActivityLink" class="btn btn-outline-secondary" href="#">Activity</a>
         <a id="projectDeadlinesLink" class="btn btn-outline-secondary" href="#">View by Deadline</a>
         <a id="projectLabelsLink" class="btn btn-outline-secondary" href="#">View by Label</a>
         <a class="btn btn-outline-primary" href="/projects/">Back to Projects</a>
