--- a/src/pages/project-activity/project-activity.html
+++ b/src/pages/project-activity/project-activity.html
@@ -1,7 +1,10 @@
 <main class="page-main py-5">
   <section class="container">
     <div class="d-flex justify-content-between align-items-center mb-4">
-      <h1 class="h3 mb-0">Task Activity</h1>
+      <div class="d-flex align-items-center gap-2">
+        <h1 class="h3 mb-0">Task Activity</h1>
+        <span id="activityLiveStatus" class="badge text-bg-secondary activity-live-status" title="Realtime status">Offline</span>
+      </div>
       <div class="d-flex gap-2">
         <a id="activityBoardLink" class="btn btn-outline-secondary" href="#">Back to Board</a>
         <a class="btn btn-outline-primary" href="/projects/">Back to Projects</a>
